[package]
name = "rsepl"
description = "A slow rust REPL"
readme = "README.md"
repository = "https://github.com/vonforum/rsepl"
version = "0.2.1"
authors = ["vonforum <vonforum@windowslive.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["repl"]
categories = ["development-tools"]

[dependencies]
clap = "2.33.0"
dirs = "1.0.5"
rustyline = "3.0.0"

[[bin]]
name = "rspl"
path = "src/main.rs"
